<resources>
    <string name="app_name" translatable="false">tappb</string>
    <string name="scan_barcode">Scan using barcode</string>
    <string name="action_search">Search</string>
    <string name="profile_picture">Profile picture</string>
    <string name="top_up_alert">To top up your balance, transfer money to the following bank account number and poke your nearest board member. Make sure to include your username! </string>
    <string name="bank_account" translatable="false">BE32 9799 9370 6502</string>
    <string name="change_favorite_item">Change favorite item</string>
    <string name="nav_home">Home</string>
    <string name="nav_stock">Stock</string>
    <string name="nav_money_overview">Money</string>
    <string name="nav_account">Account</string>
    <string name="nav_order">Order</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_history">History</string>
    <string name="member_hint">Zeus member</string>
    <string name="amount_hint">Amount</string>
    <string name="message_hint">Message</string>
    <string name="transfer">Transfer</string>
    <string name="top_up">Top up</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="currently">Currently:</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="none">None</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Enable?</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="profile_picture_camera_gallery">Use camera or gallery?</string>
    <string name="koelkast_settings" translatable="false">Koelkast</string>
    <string name="koelkast_settings_hidden">Hide me on Koelkast</string>
    <string name="koelkast_settings_quickpay_hidden">Hide favorite item</string>
    <string name="copy">Copy to clipboard</string>
    <string name="current_balance">Your current balance:</string>
    <string name="order_cancelled">Order cancelled!</string>
    <string name="order_completed">Order Completed!</string>
    <string name="no_internet_conn">No internet connection</string>
    <string name="copied_clipboard">Copied to clipboard</string>
    <string name="logged_out">Logged out</string>
    <string name="delete_all_items">Are you sure you want to delete all items?</string>
    <string name="order_confirmation">Confirm order?</string>
    <string name="transfer_confirmation">Send %1$s to %2$s </string>
    <string name="no_name">No name given</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="order_favorite_item">Order Favorite Item</string>
    <string name="no_favorite_item">You have no favorite item set</string>
    <string name="to">to</string>
    <string name="from">from</string>
</resources>
