...
                android:text="@{monthFormatter.format(transaction.getDate()).toUpperCase()}"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{transaction.getMessage()}"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/person_description"
            app:layout_constraintEnd_toStartOf="@+id/cost"
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintTop_toTopOf="parent"
            android:maxLines="1"
            android:ellipsize="end"/>

...
